Fix navbar overlapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -473,11 +473,10 @@ nav .menu-btn {
 /* articles {{{ */
 .content {
     display: flex;
-    align-items: center;
     position: absolute;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    top: 75px;
+    transform: translate(-50%,0%);
     flex-wrap: wrap;
 }
 
